--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9059124
+	base = 529c1e6
 	trimbase = 
 	parent = release/kinetic/rqt_launch
-	previous = 
+	previous = 9059124
