--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 36d001e
+	base = f8e307b
 	trimbase = 
 	parent = arch/kinetic/rqt_launch
-	previous = 
+	previous = 36d001e
