--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 629bc8e
+	base = 512fc6d
 	trimbase = 
 	parent = release/lunar/rqt_launch
-	previous = 
+	previous = 629bc8e
