--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f3401c0
+	base = 6f1f73b
 	trimbase = 
 	parent = arch/lunar/rqt_launch
-	previous = 
+	previous = f3401c0
